objects/Space_Station__c.object
<CustomObject>
    <label>Space Station</label>
    <nameField>
        <label>Space Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Space Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Crew_Members__c</fullName>
        <label>Crew Members</label>
        <summarizedField>Resource__c.Quantity__c</summarizedField>
        <summaryForeignKey>Resource__c.Space_Station__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shield_Status__c</fullName>
        <label>Shield Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Operational</fullName>
                    <default>true</default>
                    <label>Not Yet Operational</label>
                </value>
                <value>
                    <fullName>Fully Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>